<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_logon_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:text="@string/logon_title"
            android:textColor="#c3c3c3"
            android:background="#3f3f3f"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutTitle"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:orientation="vertical" >

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutHint"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp" >

        <TextView
            android:id="@+id/tv_logon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/logon_name"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/logon_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tv_logon_name"
            android:ems="10" >

        </EditText>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayoutName"
        android:layout_alignParentLeft="true" >

        <TextView
            android:id="@+id/tv_logon_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/logon_password"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/logon_password_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tv_logon_password"
            android:ems="10"
            android:inputType="textPassword" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayoutPassword"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/logon_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/logon_logon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_logon_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="133dp"
            android:layout_weight="0.57"
            android:text="@string/logon_note" />
    </LinearLayout>

</RelativeLayout>
