<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <!--
    <RelativeLayout
        android:id="@+id/filloutLinearLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imageButtonArrow"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:background="#3f3f3f"
            android:src="@drawable/ats_filloutinfo" />

        <TextView
            android:id="@+id/tv_fillout_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageButtonArrow"
            android:background="#3f3f3f"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/fillout_title"
            android:textColor="#c3c3c3"
            android:textSize="30dp" />

    </RelativeLayout>
        android:layout_below="@+id/filloutLinearLayoutTitle"
    -->

    <TableLayout
        android:id="@+id/filloutTableLayoutInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dip"
        android:background="@color/question_group_bg"
        android:orientation="vertical"
        android:padding="1dp"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/tablerow_fillout_name"
            android:background="@color/question_group_bg"
            android:orientation="horizontal"
            android:paddingBottom="1dp" >

            <TextView
                android:id="@+id/tv_fillout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/fillout_name"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/fillout_name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tv_fillout_name"
                android:textSize="20dp"
                android:ems="10" >

            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tablerow_fillout_sex"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:paddingTop="1dp" >

            <TextView
                android:id="@+id/tv_fillout_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fillout_sex"
                android:textSize="20dp" />

            <RadioGroup
                android:id="@+id/radioGroupSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tv_fillout_sex"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioButtonMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/fillout_man" />

                <RadioButton
                    android:id="@+id/radioButtonWoman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fillout_woman" />

            </RadioGroup>

        </TableRow>

        <TableRow
            android:id="@+id/tablerow_fillout_email"
            android:background="@color/question_group_bg"
            android:orientation="horizontal"
            android:paddingTop="1dp" >

            <TextView
                android:id="@+id/tv_fillout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/fillout_email"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/fillout_name_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/tv_fillout_email"
                android:textSize="20dp"
                android:ems="10" >
            </EditText>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayoutNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filloutTableLayoutInfo"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/fillout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/button"
            android:text="@string/fillout_next" />

    </LinearLayout>

</RelativeLayout>
