<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/infohintLinearLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/infohintImageButtonArrow"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:background="#3f3f3f"
            android:src="@drawable/ats_filloutinfo" />

        <TextView
            android:id="@+id/tv_infohint_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/infohintImageButtonArrow"
            android:background="#3f3f3f"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/infohint_title"
            android:textColor="#c3c3c3"
            android:textSize="30dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/infohintLinearLayoutInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutTitle"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_infohint_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/infohint_name"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_infohint_namecontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_infohint_name"
            android:text="张小三"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infohintLinearLayoutNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infohintLinearLayoutInfo"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/infohint_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/infohint_next" />

    </LinearLayout>

</LinearLayout>
